--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Shabd</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_learn">Learn</string>
+    <string name="title_dictionary">Dictionary</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_quick">Quick</string>
 </resources>
