--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Shabd</string>
     <string name="title_home">Home</string>
 
@@ -7,7 +7,20 @@
     <string name="title_settings">Settings</string>
     <string name="title_quick">Quick</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome To Shabd</string>
+
+    <string-array name="basic_array">
+        <item>Food</item>
+        <item>Clothes</item>
+        <item>Drink</item>
+        <item>Play</item>
+    </string-array>
+
+    <string-array name="basic_array_res" tools:ignore="TypographyDashes">
+        <item>https://www.pinclipart.com/picdir/big/1-19283_snack-healthy-diet-clip-art-transprent-png-clip.png</item>
+        <item>default_card_placeholder</item>
+        <item>default_card_placeholder</item>
+        <item>default_card_placeholder</item>
+    </string-array>
 </resources>
