Added basic Firebse Cloud Messaging helper class without image support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,6 @@
 
     </string-array>
 
+    <string name="default_notification_channel_id" translatable="false">notify</string>
+
 </resources>
