--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,9 +69,9 @@
         <item>Lunch</item>
         <item>Dinner</item>
         <item>I am hungry</item>
+        <item>I want sweets because i like them</item>
         <item>I want food</item>
         <item>I love eating</item>
-        <item>I want sweets cuz i like them</item>
     </string-array>
     <string-array name="Food_array_res" tools:ignore="TypographyDashes">
         <item>https://www.pinclipart.com/picdir/big/1-19283_snack-healthy-diet-clip-art-transprent-png-clip.png</item>
