--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">"शब्द "</string>
     <string name="title_home">Home</string>
 
-    <string name="title_learn">Learn</string>
+    <string name="title_learn">Play</string>
     <string name="title_dictionary">Dictionary</string>
     <string name="title_settings">Settings</string>
     <string name="title_quick">Quick</string>
