--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Shabd</string>
     <string name="title_home">Home</string>
 
-    <string name="title_learn">Learn</string>
+    <string name="title_learn">Play</string>
     <string name="title_dictionary">Dictionary</string>
     <string name="title_settings">Settings</string>
     <string name="title_quick">Quick</string>
