--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,9 @@
     <string name="rate_setting">Rate and Review</string>
     <string name="play_play_text">Play Piano</string>
 
+    <string name="undo">Undo </string>
+    <string name="stroke_increase">SW+ </string>
+    <string name="stroke_decrease">SW- </string>
+    <string name="color">Color </string>
+
 </resources>
