--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -12,6 +12,7 @@
     <string name="shabd">शब्द</string>
     <string name="overview">अवलोकन</string>
     <string name="developer">डेवलपर</string>
+    <string name="submit">जमा करें</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
