--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="shabd">SHABD</string>
     <string name="overview">Overview</string>
     <string name="developer">Developer</string>
+    <string name="submit">Submit</string>
 
     <string name="url" translatable="false">https://googledictionaryapi.eu-gb.mybluemix.net/?define="</string>
     <string name="query" translatable="false">"</string>
