--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="color">Color </string>
 
     <string name="notification_channel_name" translatable="false">DM</string>
+    <string name="quiz" translatable="false">Quiz</string>
 </resources>
